--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
+    "react-intersection-observer": "^9.10.3",
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.8",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -53,6 +56,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
+    "three": "^0.165.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
@@ -61,6 +65,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.14.1",
+    "@types/three": "^0.165.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
