--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "react-intersection-observer": "^9.10.3",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
@@ -46,6 +48,7 @@
     "framer-motion": "^11.2.10",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
+    "maath": "^0.10.7",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
