--- a/package.json
+++ b/package.json
@@ -55,11 +55,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/drei": "^9.106.0",
-    "three": "^0.165.0",
-    "maath": "^0.10.7"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -68,7 +64,6 @@
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@types/three": "^0.165.0"
+    "typescript": "^5"
   }
 }
