--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
-    "react-intersection-observer": "^9.10.3",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -47,11 +46,14 @@
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "next-themes": "^0.3.0",
+    "ogl": "^1.0.11",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.10.3",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
